--- a/KhongMinhKhiem_LAB456/KhongMinhKhiem_LAB456.csproj
+++ b/KhongMinhKhiem_LAB456/KhongMinhKhiem_LAB456.csproj
@@ -215,6 +215,10 @@
     <Compile Include="Migrations\202006050711089_PopulateCategoryTable.Designer.cs">
       <DependentUpon>202006050711089_PopulateCategoryTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006120837120_AddNameColumnToApplicationUser.cs" />
+    <Compile Include="Migrations\202006120837120_AddNameColumnToApplicationUser.Designer.cs">
+      <DependentUpon>202006120837120_AddNameColumnToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -227,8 +231,6 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CourseViewModel.cs" />
     <Compile Include="ViewModels\FutureDate.cs" />
-    <Compile Include="ViewModels\FutureDateAttribute.cs" />
-    <Compile Include="ViewModels\ValicationAttribute.cs" />
     <Compile Include="ViewModels\ValidTime.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -242,9 +244,7 @@
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="ApplicationInsights.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    <Content Include="ClassDiagram1.cd" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -313,6 +313,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202006050711089_PopulateCategoryTable.resx">
       <DependentUpon>202006050711089_PopulateCategoryTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006120837120_AddNameColumnToApplicationUser.resx">
+      <DependentUpon>202006120837120_AddNameColumnToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
